No working stencil mode in 2d paint mode #35141

Closed
opened 2013-04-29 09:52:53 +02:00 by Michael P. · 5 comments

%%%--- Operating System, Graphics card ---
System: Windows 7 Professional 64 bit
ATI Radeon HD 5800

- Blender version with error, and version that worked ---

Blender: 2.67 rc (r56271)

- Short description of error ---

The stencil option in 2d paint mode seems not to working. It works fine in 3d paint.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Please open the attached blend file with Blender: 2.67 rc (r56271) and try to paint
with the stencil option selected. On the left side in 3d paint it works fine.
%%%

%%%--- Operating System, Graphics card --- System: Windows 7 Professional 64 bit ATI Radeon HD 5800 - Blender version with error, and version that worked --- Blender: 2.67 rc (r56271) - Short description of error --- The stencil option in 2d paint mode seems not to working. It works fine in 3d paint. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Please open the attached blend file with Blender: 2.67 rc (r56271) and try to paint with the stencil option selected. On the left side in 3d paint it works fine. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%If the stencil image is scaled (rmb + shift + x or y) in 2d or 3d paint it's not possible for me set it back to the original image aspect ratio.
I belive that the button "image aspect" is for this purpose, but it doesn't work.
Please use the attached blend file to test this.%%%

%%%If the stencil image is scaled (rmb + shift + x or y) in 2d or 3d paint it's not possible for me set it back to the original image aspect ratio. I belive that the button "image aspect" is for this purpose, but it doesn't work. Please use the attached blend file to test this.%%%

%%%Fixed stencil not working.

The Image Aspect has a different purpose, it's for matching the aspect ratio of image textures. I've added a Reset Transform button now to clear the transformation.%%%

%%%Fixed stencil not working. The Image Aspect has a different purpose, it's for matching the aspect ratio of image textures. I've added a Reset Transform button now to clear the transformation.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Saw the changes in SVN. Impressive! And so fast... Thank you Brecht. :)%%%

%%%Saw the changes in SVN. Impressive! And so fast... Thank you Brecht. :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35141
No description provided.