Fix #35141: stencil and 3D texture mode did not work with 2D image paint.